--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
+    "gsap": "^3.14.2",
     "vue": "^3.5.25"
   },
   "devDependencies": {
